# eshorizon

./: .gitignore  Cargo.toml  README.md
src/: aggregate.rs  codec_main.rs  command_check.rs  command_main.rs  commandhandler.rs  compare.rs  context.rs  entity.rs  event.rs  eventbus.rs  eventhandler.rs  eventmaintenance.rs  eventsource.rs  eventstore.rs  lib.rs  matcher.rs  middleware.rs  outbox.rs  repo.rs  snapshot.rs
src/aggregatestore/: mod.rs
src/codec/: mod.rs
src/codec/bson/: command.rs  event.rs  mod.rs  uuid.rs
src/codec/json/: command.rs  event.rs  mod.rs
src/uuid/: uuid.rs
