[package]
name = "eshorizon"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = {version = "1.8.0",features = ["v4","serde","v5"]}
mongodb = { version = "3.1.0", features = ["default"] }
bson = { version = "2.13.0", features = [ "default","uuid-0_8",]}
serde = {version = "1.0.198",features = ["derive"]}
serde_json = "1.0.116"
erased-serde = "0.4.4"
serde_with = "3.11.0"
chrono = { version = "0.4", features = ["default","serde"] }